[profile.release]
panic = 'unwind'

[workspace]
members = [
    'calls',
    'cli',
]

[patch.crates-io]
sc-client-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-basic-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-block-builder = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-chain-spec-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-cli = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-babe-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-epochs = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-manual-seal = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-pow = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-slots = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-uncles = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-client-db = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-executor = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-executor-common = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-runtime-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-executor-wasmi = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-executor-wasmtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-finality-grandpa-warp-sync = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-informant = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-light = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-network = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-network-gossip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-network-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-peerset = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-proposer-metrics = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-rpc-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-rpc-server = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-service = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-service-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-state-db = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-sync-state-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-telemetry = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-tracing = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-tracing-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-transaction-graph = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-support = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-support-procedural = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-support-procedural-tools = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-support-procedural-tools-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-support-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-system = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-system-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-system-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-executive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-metadata = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-assets = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-atomic-swap = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-balances = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-bounties = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-collective = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-contracts = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-contracts-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-contracts-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-democracy = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-elections = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-example = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-example-offchain-worker = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-example-parallel = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-identity = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-im-online = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-indices = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-lottery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-membership = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-mmr = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-mmr-primitives = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-multisig = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-nicks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-node-authorization = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-offences = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-proxy = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-randomness-collective-flip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-recovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-scheduler = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-scored-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-session-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-society = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-staking-reward-curve = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-sudo = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-transaction-payment = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-transaction-payment-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-treasury = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-tips = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-utility = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-vesting = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-allocator = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-api-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-api-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-application-crypto = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-application-crypto-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-arithmetic = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-arithmetic-fuzzer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-block-builder = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-blockchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-consensus-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-consensus-pow = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-consensus-vrf = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-core = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-database = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-debug-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-externalities = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-inherents = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-io = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-keyring = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-npos-elections = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-npos-elections-compact = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-npos-elections-fuzzer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-panic-handler = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime-interface-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime-interface-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime-interface-test-wasm = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime-interface-test-wasm-deprecated = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-sandbox = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-serializer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-state-machine = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-std = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-storage = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-tasks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-test-primitives = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-tracing = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-trie = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-utils = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-version = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-wasm-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
substrate-prometheus-endpoint = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
