[package]
name = 'calls'
version = '0.1.0'
authors = ['Yuanchao Sun <julian@oct.network>']
edition = '2018'

[dependencies]
async-trait = "0.1.50"
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive', 'full'] }
substrate-subxt = { git = "https://github.com/octopus-network/substrate-subxt.git", branch = "octopus" }
substrate-subxt-proc-macro = { version = "0.15.0" }

pallet-ibc = { git = 'https://github.com/octopus-network/substrate-ibc.git', branch = 'dv-ibc-dev' }

frame-system = '3.0.0'
pallet-balances = '3.0.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-runtime = '3.0.0'
