
[package]
name = 'cli'
version = '0.1.0'
authors = ['Yuanchao Sun <julian@oct.network>']
edition = '2018'

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anomaly = '0.2.0'
thiserror = '1.0.11'
clap = '2.33.0'
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive', 'full'] }
hex = '0.4.0'
lazy_static = '1.4.0'
# rand = '0.7.2'
substrate-subxt = { git = "https://github.com/octopus-network/substrate-subxt.git", branch = "octopus" }

calls = { path = '../calls' }
pallet-ibc = { git = 'https://github.com/octopus-network/substrate-ibc.git', branch = 'master' }


sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-keyring = '3.0.0'

serde_json = '1'

ibc = { git = 'https://github.com/octopus-network/ibc-rs.git', branch = 'master' }

tendermint = '=0.21.0'
tendermint-proto = '=0.21.0'
