[package]
name = 'relayer'
version = '0.1.0'
authors = ['Yuanchao Sun <ys@cdot.network>']
edition = '2018'

[dependencies]
async-std = '1.6.2'
clap = '2.33.0'
codec = { package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive', 'full'] }
env_logger = '0.7.1'
hex = '0.4.0'
log = '0.4.0'
serde = '1.0.115'
serde_derive = '1.0'
toml = '0.5'
substrate-subxt = { git = 'https://github.com/cdot-network/substrate-subxt.git', branch = 'ibc-demo', version = '0.12.0'}

calls = { path = '../calls' }
node-runtime = { path = '../runtime', package = 'node-template-runtime' }
pallet-ibc = { path = '../pallets/ibc' }

frame-system = '2.0.0'
sp-core = '2.0.0'
sp-finality-grandpa = '2.0.0'
sp-keyring = '2.0.0'
sp-runtime = '2.0.0'
sp-storage = '2.0.0'
sp-trie = '2.0.0'

[dependencies.ibc]
default-features = false
git = 'https://github.com/cdot-network/ibc-rs.git'
package = 'ibc'
branch = 'ys'

[dependencies.tendermint]
version = "=0.17.0"

[dependencies.tendermint-proto]
version = "=0.17.0"